Updated image for Trivia Quiz

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,8 +32,8 @@
                     
                     <div class="portfolio"> 
                         <figure class="image-name">
-                            <a href="https://aditi-sa.github.io/TriviaGame/"> <img class="portfolio-image" src="assets/images/pfimage1.jpg" alt="Wild Life">
-                            <h2 class="portfolio-name">Trivia Game</h2>
+                            <a href="https://aditi-sa.github.io/TriviaGame/"> <img class="portfolio-image" src="assets/images/Trivia.PNG" alt="Wild Life">
+                            <h2 class="portfolio-name">Trivia Quiz</h2>
                             </a>
                         </figure>
                                     
