Added links to new projects

--- a/index.html
+++ b/index.html
@@ -35,14 +35,18 @@
                     <p><img class="headshot" src="./assets/images/headshot.jpg" alt="HeadShot Photo"> I am passionate
                         about converting ideas to reality!
 
-                        <p class="textarea">I am a full stack developer with 6+ years of experience in testing of
-                            embedded systems.
-                            Currently, i am enrolled in University of Toronto School of Continuing Education, Coding Boot
-                            Camp.. </p> <br>
+                        <p class="textarea">Full Stack Web Developer with a passion for transforming ideas into application reality. Effective
+                            at combining creativity and problem solving to develop user-friendly applications.
+                            A background of 6+ years of experience in system, integration, manual testing and software test
+                            management powers me to ensure high quality in my products.                            
+                            I Enjoy leveraging background in software verification to provide unique perspectives on how the product should meet the requirements efficiently. 
+                            I am Passionate about approaching programming challenges from different angles, and collaborating with others to create meaningful web applications
+                        </p> <br>
                         <p class="textarea">My hobbies include:
                             <ul>
-                                <li> learning about web apploications and technologies</li>
+                                <li> Learning about web applications and technologies</li>
                                 <li> Reading books</li>
+                                <li> Travelling</li>
                             </ul>
                         </p>
                 </div>
@@ -52,7 +56,7 @@
     </div>
 
     <footer class="footer">
-        Copyright &copy; Aditi June-2018
+        Copyright &copy; Aditi 2018
     </footer>
 
 </body>
