--- a/portfolio.html
+++ b/portfolio.html
@@ -36,9 +36,15 @@
                             <h2 class="portfolio-name">Trivia Quiz</h2>
                             </a>
                         </figure>
+
+                        <figure class="image-name">
+                            <a href="https://github.com/Aditi-SA/DifferOrDie-MemoryGame"> <img class="portfolio-image" src="assets/images/React_Memory.jpg" alt="memory">
+                            <h2 class="portfolio-name">REACT DifferOrDie (Memory test)</h2>
+                            </a>
+                        </figure>
                                     
                         <figure class="image-name">
-                            <a href="https://github.com/Aditi-SA/Bamazon"> <img class="portfolio-image" src="assets/images/bamazon.jpg" alt="Deep Ocean">
+                            <a href="https://github.com/Aditi-SA/Bamazon"> <img class="portfolio-image" src="assets/images/bamazon.png" alt="Deep Ocean">
                             <h2 class="portfolio-name">Bamazon - a CLI Store Front</h2>
                             </a>
                         </figure>
@@ -51,7 +57,7 @@
 
                         <figure class="image-name">
                             <a href="https://aditi-sa.github.io/SUPERHERO_SHOWDOWN/"> <img class="portfolio-image" src="assets/images/Superhero.PNG" alt="Books">
-                            <h2 class="portfolio-name">Superheru showdown</h2>
+                            <h2 class="portfolio-name">Superhero showdown</h2>
                             </a>
                         </figure>
 
