Updated index and navigation

--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
                     </div>
                     <nav class="nav">
                         <ul>
-                            <li><a href="index.html">About</a></li>
-                            <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="#" class="active">Contact</a></li>
+                            <a href="index.html">About |</a>
+                            <a href="portfolio.html">Portfolio |</a>
+                            <a href="#" class="active">Contact</a>
                         </ul>
                     </nav> 
                 </div> 
