--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Aditi Responsive_Profile/Index</title>
+    <title>Aditi Responsive Portfolio/Index</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -19,9 +19,9 @@
                 </div>
                 <nav class="nav">
                     <ul>
-                        <li><a href="#" class="active">About</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <a href="#" class="active">About |</a>                        
+                        <a href="portfolio.html">Portfolio |</a>                        
+                        <a href="contact.html">Contact</a>
                     </ul>
                 </nav>
             </div>
@@ -32,21 +32,24 @@
                 <div class="top">
                     <h1>About me</h1>
 
-                    <p><img class="headshot" src="./assets/images/headshot.jpg" alt="HeadShot Photo"> I am passionate
-                        about converting ideas to reality!
+                    <p><img class="headshot" src="./assets/images/headshot1.jpg" alt="HeadShot Photo"> 
 
                         <p class="textarea">Full Stack Web Developer with a passion for transforming ideas into application reality. Effective
                             at combining creativity and problem solving to develop user-friendly applications.
+                            <br> <br>
                             A background of 6+ years of experience in system, integration, manual testing and software test
-                            management powers me to ensure high quality in my products.                            
+                            management powers me to ensure high quality in my products. 
+                            <br> <br>                            
                             I Enjoy leveraging background in software verification to provide unique perspectives on how the product should meet the requirements efficiently. 
                             I am Passionate about approaching programming challenges from different angles, and collaborating with others to create meaningful web applications
-                        </p> <br>
+                        </p> <br> <br> <br> <br>
                         <p class="textarea">My hobbies include:
                             <ul>
-                                <li> Learning about web applications and technologies</li>
-                                <li> Reading books</li>
-                                <li> Travelling</li>
+                                <li> * Learning about web applications and technologies</li>
+                                <li> * Reading books</li>
+                                <li> * Travelling</li>
+                                <li> * Meditation</li>
+
                             </ul>
                         </p>
                 </div>
