--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,9 @@
                     </div>
                     <nav class="nav">
                         <ul>
-                            <li><a href="index.html">About</a></li>
-                            <li><a href="#" class="active">Portfolio</a></li>
-                            <li><a href="contact.html">Contact</a></li>                   
+                            <a href="index.html">About |</a>
+                            <a href="#" class="active">Portfolio |</a>
+                            <a href="contact.html">Contact</a>                
                         </ul>   
                     </nav>
                 </div> 
