added new projet and link

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,6 +46,13 @@
                     </figure>
 
                     <figure class="image-name">
+                        <a href="https://aditi-sa.github.io/GifTastic/"> <img class="portfolio-image" src="assets/images/GifSearch.jpg"
+                                alt="Recruiter">
+                            <h2 class="portfolio-name">Gif Search</h2>
+                        </a>
+                    </figure>
+
+                    <figure class="image-name">
                         <a href="https://aditi-sa.github.io/TriviaGame/"> <img class="portfolio-image" src="assets/images/Trivia.PNG"
                                 alt="Trivia">
                             <h2 class="portfolio-name">Trivia Quiz</h2>
