added new project burger town to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,12 @@
 
                 <div class="portfolio">
                     <figure class="image-name">
+                        <a href="https://desolate-cliffs-89269.herokuapp.com/"> <img class="portfolio-image" src="assets/images/burger.png"
+                                alt="BurgerApp">
+                            <h2 class="portfolio-name">Burger Application</h2>
+                        </a>
+                    </figure>                    
+                    <figure class="image-name">
                         <a href="https://boiling-savannah-54530.herokuapp.com/login"> <img class="portfolio-image" src="assets/images/Recruiter.jpg"
                                 alt="Recruiter">
                             <h2 class="portfolio-name">Power Recruiter</h2>
