Updated image for bamazon

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
                         </a>
                     </figure>
                     <figure class="image-name">
-                        <a href="https://github.com/Aditi-SA/Bamazon"> <img class="portfolio-image" src="assets/images/bamazon.png"
+                        <a href="https://github.com/Aditi-SA/Bamazon"> <img class="portfolio-image" src="assets/images/bamazon1.jpg"
                                 alt="Bamazon">
                             <h2 class="portfolio-name">Bamazon - a CLI Store Front</h2>
                         </a>
