--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
                     <figure class="image-name">
                         <a href="https://shielded-beach-16365.herokuapp.com/"> <img class="portfolio-image" src="assets/images/news.jpg"
                                 alt="Trivia">
-                            <h2 class="portfolio-name">New Network On the Go</h2>
+                            <h2 class="portfolio-name">NEWS Network On the Go</h2>
                         </a>
                     </figure>
                     
