Modified text content

--- a/index.html
+++ b/index.html
@@ -42,14 +42,12 @@
                             <br> <br>                            
                             I Enjoy leveraging background in software verification to provide unique perspectives on how the product should meet the requirements efficiently. 
                             I am Passionate about approaching programming challenges from different angles, and collaborating with others to create meaningful web applications
-                        </p> <br> <br> <br> <br>
-                        <p class="textarea">My hobbies include:
+                        </p> <br> <br>
+                        <p class="textarea">My interests include:
                             <ul>
                                 <li> * Learning about web applications and technologies</li>
                                 <li> * Reading books</li>
                                 <li> * Travelling</li>
-                                <li> * Meditation</li>
-
                             </ul>
                         </p>
                 </div>
